getTasks return unmodifiable copy